Fix Categorical driterion dropdown visibility

--- a/opal-gwt-client/src/main/resources/org/obiba/opal/web/gwt/app/public/less/opal.less
+++ b/opal-gwt-client/src/main/resources/org/obiba/opal/web/gwt/app/public/less/opal.less
@@ -685,8 +685,8 @@ ul.chooser-options {
 /*
  * ValuesTablePresenter
  */
-.min-height-450 {
-  min-height: 450px;
+.min-height-500 {
+  min-height: 500px;
 }
 
 .small-input input {
